minios-installer (2.3) unstable; urgency=medium

  * Add function to extract boot file names from /proc/cmdline and enhance
    MiniOS source detection

 -- crims0n <crims0n@minios.dev>  Sun, 10 Aug 2025 19:46:15 +0000

minios-installer (2.2) unstable; urgency=medium

  * Split minios-installer into libraries to improve code structure.
  * Correct and improve translation.
  * Improve project structure.
  * Add disk monitoring functionality.
  * Replace the inactive cancel button with a button to restart the
    installation.
  * Extend the Back and Continue buttons
  * Change the color of the Back and Continue buttons to better match the
    actions being performed.
  * Add disk size formatting and enhance device information display.
  * Add definition and display of disks that have mounted partitions.
  * Remove the disk on which MiniOS is currently running from the list.

 -- crims0n <crims0n@minios.dev>  Mon, 07 Jul 2025 23:59:57 +0300

minios-installer (2.1) unstable; urgency=medium

  * Add support for Python 3.7 for compatibility with Debian 10.

 -- crims0n <crims0n@minios.dev>  Sun, 06 Jul 2025 13:53:01 +0300

minios-installer (2.0) unstable; urgency=medium

  * Rewrite minios-installer to Python 3 with GTK3 support.
  * Remove ncurses interface.

 -- crims0n <crims0n@minios.dev>  Mon, 26 May 2025 17:35:21 +0300

minios-installer (1.2) unstable; urgency=medium

  * The EFI checkbox has been removed from the interface. By default, an
    additional ESP partition is created for all file systems except FAT32.
  * Removed the option to install on ext2 and btrfs, as they are not very
    popular.

 -- crims0n <crims0n@minios.dev>  Sun, 09 Feb 2025 04:23:55 +0300

minios-installer (1.1) unstable; urgency=medium

  * Initial release

 -- crims0n <crims0n@minios.dev>  Mon, 18 Mar 2024 00:02:53 +0300